# co-log-benchmarks

./: README.md  cabal.project  hie.yaml
.github/workflows/: ci.yml
co-log-benchmark-simple/: Main.hs  co-log-benchmark-simple.cabal
