cabal-version:       2.4
name:                co-log-benchmark-simple
version:             0.1.0.0
synopsis:            Benchmarks of the co-log library.
description:         Set of benchmarks that can be used to verify
                     that @co-log@ library does not introduce unnesessarily
                     overhead for your use-case.
license:             MPL-2.0
license-file:        LICENSE
author:              Alexander Vershilov, Kowainik
maintainer:          co-log
copyright:           2018-2020 Kowainik, 2021-2025 co-log
category:            Logging, Benchmarks
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC == 9.12.2

source-repository head
  type:              git
  location:          https://github.com/co-log/co-log-benchmarks.git

executable co-log-bench
  main-is:             Main.hs
  if os(windows)
    buildable: False
  build-depends:       base >= 4.14 && < 4.22
                     , bytestring
                     , co-log
                     , tasty-bench
                     , text
  ghc-options:         -Weverything
                       -Werror
                       -Wno-implicit-prelude
                       -Wno-unsafe
                       -Wno-missing-safe-haskell-mode
                       -Wno-prepositive-qualified-module
                       -Wno-missing-import-lists
                       -Wno-monomorphism-restriction
                       -fhide-source-paths
                       -freverse-errors

  default-language:    Haskell2010
